apps/base/metapi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metapi
  labels:
    app: metapi
spec:
  serviceName: metapi-headless
  replicas: 1
  selector:
    matchLabels:
      app: metapi
  template:
    metadata:
      labels:
        app: metapi
    spec:
      containers:
      - name: metapi
        image: ghcr.io/isning/metapi:latest@sha256:7b63adb5bdc7510999b0a21e76475bdceabad279bc1dfa406f652675ffb5cc47
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 1500m
            memory: 1024Mi
        volumeMounts:
        - name: data
          mountPath: /app/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
