apps/base/metapi/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: metapi-headless
  labels:
    app: metapi
spec:
  clusterIP: None
  selector:
    app: metapi
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
