apps/base/metapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metapi
  labels:
    app: metapi
spec:
  selector:
    app: metapi
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
