apps/base/metapi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metapi-ui
  labels:
    app: metapi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
  hostnames:
    - "metapi.isning.moe"
  rules:
    - backendRefs:
        - name: metapi
          port: 80
